--liquibase formatted sql

--changeset dakorshik:init


create table account
(
    id          integer generated by default as identity primary key,
    username    varchar(100),
    firstname   varchar(100),
    lastname    varchar(100),
    tg_id       integer not null
        constraint talegram_id_c unique
);

create table dictionary
(
    id       integer generated by default as identity primary key,
    name     varchar(50),
    owner_id integer not null
        constraint user_fk references account (id)
);
create index owner_index on dictionary (owner_id);

create table word
(
    id      integer generated by default as identity primary key,
    eng     varchar(50) not null,
    rus     varchar(50) not null,
    dict_id integer      not null
        constraint dictionary_fk references dictionary (id)
);
create index dictionary_index on word (dict_id);

create table favorite
(
    user_id integer not null
        constraint fav_user_id_fk references account (id),
    dict_id integer not null
        constraint fav_dict_id_fk references dictionary (id),
    PRIMARY KEY (user_id, dict_id)
);
create index user_id_index on favorite (user_id);
